--- a/Laborator8/pom.xml
+++ b/Laborator8/pom.xml
@@ -11,6 +11,13 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.9.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.15</version>
+        </dependency>
+
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
